# EDI-Parser

./: ADDING_SEGMENTS.md  ARCHITECTURE.md  Cargo.toml  EDI_TESTING_GUIDE.md  ELEMENT_ID_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  SCHEMA_EXTENSION_GUIDE.md  SEGMENT_CHEAT_SHEET.md  STRUCTURED_SEGMENTS.md  edi_template.txt  libsegment_definition.rlib  prepublish_check.sh  test_setup.sh
examples/: adding_segments_example.rs  advanced_parser.rs  basic_parser.rs  comprehensive_schema_demo.rs  custom_test.rs  edi_file_tester.rs  edi_interactive_tester.rs  element_id_mapping_demo.rs  element_id_validation.rs  extended_850_parser.rs  loop_parsing_demo.rs  structured_parsing.rs  structured_segments_demo.rs  validation_framework.rs
src/: error.rs  lib.rs
src/models/: interchange.rs  loops.rs  mod.rs  schema_engine.rs  segment.rs  segment_definition.rs  segment_validator.rs  segments_850_v004010.rs  structured_segments.rs  transaction.rs  validated_element.rs  version.rs
src/parsers/: builder.rs  mod.rs  schema_validating_parser.rs  validating_parser.rs  x12.rs
src/segments/: common.rs  control.rs  mod.rs  purchase_order.rs
src/transactions/: invoice_810.rs  mod.rs  purchase_order_850.rs
src/utils/: mod.rs
src/validation/: mod.rs  rules.rs  schema.rs  validator.rs
tests/: integration_tests.rs  structured_segments_tests.rs
tests/test_files/: invalid_sample.edi  sample_810.edi  sample_850.edi  sample_850_extended.edi
